--- a/index.html
+++ b/index.html
@@ -1,36 +1,57 @@
 <html>
 
-<body>
-	<head>
-		<link rel="stylesheet" href="assets/css/main.css">
-	</head>
-	
-	<div id="main_wrapper">
-		<div class="category">
-			<h1><img class="img_center" src="assets/img/logo.png"></h1>
-			<p>Welcome to ESNbang!, the new application for members of the Erasmus Student Network !</p>
-			<p>This application gathers many tools used every day by ESNers, everything is at the same place, no need to search for the tools anymore ! <br />
-			ESNbang! can also send you notifications: it listens to information sources (Facebook pages, livestreams, etc) and can tell you when something is happening !
-			Moreover, when you close its main frame, the application doesn't close itself, but rather goes background on your computer, still listening for news :)
-			<br /></p>
-			<p class="sideinfo"><br /><br />Coded with love by the G33k team (France)</p>
-		</div>
-	</div>
-	
-	<nav id="side_menu">
-		<li id="home_btn" class="section"></li>
-		<li id="tuto_btn" class="section"></li>
-		<hr />
-		<li id="faucon_btn" class="section"></li>
-		<li id="logoinserter_btn" class="section"></li>
-		<li id="wiki_btn" class="section"></li>
-		<li id="galaxy_btn" class="section"></li>
-		<li id="buddysystem_btn" class="section"></li>
-	</nav>
-	
-</body>
+	<body>
+		<head>
+			<link rel="stylesheet" href="assets/css/main.css">
+		</head>
 
-<footer>
-	<script type="text/javascript" src="assets/js/main.js"></script>
-</footer>
+		<div id="loading">
+			<h1><img id="loading_logo" class="img_loading" src="assets/img/star.png"></h1>
+		</div>
+		
+		<div id="main_wrapper">
+			<div id="home" class="category">
+				<h1><img class="img_center" src="assets/img/logo.png"></h1>
+				<p>Welcome to ESNbang!, the new application for members of the Erasmus Student Network !</p>
+				<p>This application gathers many tools used every day by ESNers, everything is at the same place, no need to search for the tools anymore ! <br />
+				ESNbang! can also send you notifications: it listens to information sources (Facebook pages, livestreams, etc) and can tell you when something is happening !
+				Moreover, when you close its main frame, the application doesn't close itself, but rather goes background on your computer, still listening for news :)
+				<br /></p>
+				<p class="sideinfo"><br />Coded with love by the G33k team (France)</p>
+			</div>
+
+            <iframe id="faucon_frame" src="http://faucondor.ixesn.fr"></iframe>
+            <!-- <iframe id="logoinserter_frame" src="http://logoinserter.esnlille.fr"></iframe> --> 
+            <iframe id="wiki_frame" src="http://wiki.ixesn.fr"></iframe>
+            <!-- <iframe id="galaxy_frame" src="http://galaxy.esn.org" sandbox="allow-scripts"></iframe> -->
+			<iframe id="buddysystem_frame" src="http://buddysystem.eu/choose"></iframe>
+		</div>
+
+		<nav id="side_menu">
+			<li id="home_btn" class="section" title="test" onclick="show_home()"></li>
+			<!-- <li id="tuto_btn" class="section"></li> -->
+			<hr />
+			<li id="faucon_btn" class="section" onclick="show_faucondor()"></li>
+			<!-- <li id="logoinserter_btn" class="section" onclick="show_logoinserter()"></li> -->
+			<li id="wiki_btn" class="section" onclick="show_wiki()"></li>
+			<!-- <li id="galaxy_btn" class="section" onclick="show_galaxy()"></li> -->
+			<li id="buddysystem_btn" class="section" onclick="show_buddysystem()"></li>
+		</nav>
+
+	</body>
+
+	<footer>
+		<script type="text/javascript" src="assets/js/main.js"></script>
+		<script>
+            document.addEventListener("keydown", function (e) {
+                if (e.which === 123) {
+                    require('remote').getCurrentWindow().toggleDevTools();
+                    mainWindow.webContents.openDevTools()
+                } else if (e.which === 116) {
+                    location.reload();
+                }
+            });
+		</script>
+	</footer>
+
 </html>
