--- a/index.html
+++ b/index.html
@@ -28,14 +28,24 @@
 		</div>
 
 		<nav id="side_menu">
-			<li id="home_btn" class="section" title="test" onclick="show_home()"></li>
-			<!-- <li id="tuto_btn" class="section"></li> -->
+			<li id="home_btn" class="section" title="Home" onclick="show_home()">
+				<span>Home</span>
+			</li>
+			
 			<hr />
-			<li id="faucon_btn" class="section" onclick="show_faucondor()"></li>
+			<li id="faucon_btn" class="section" onclick="show_faucondor()">
+				<span>Faucondor</span>
+			</li>
+			<li id="wiki_btn" class="section" onclick="show_wiki()">
+				<span>Wiki ESN France</span>
+			</li>
+			<li id="buddysystem_btn" class="section" onclick="show_buddysystem()">
+				<span>BuddySystem</span>
+			</li>
+			
+			<!-- <li id="tuto_btn" class="section"></li> -->
 			<!-- <li id="logoinserter_btn" class="section" onclick="show_logoinserter()"></li> -->
-			<li id="wiki_btn" class="section" onclick="show_wiki()"></li>
 			<!-- <li id="galaxy_btn" class="section" onclick="show_galaxy()"></li> -->
-			<li id="buddysystem_btn" class="section" onclick="show_buddysystem()"></li>
 		</nav>
 
 	</body>
