Added notification when the application is closed

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 	<footer>
 		<script type="text/javascript" src="assets/js/main.js"></script>
 		<script type="text/javascript" src="assets/js/storage.js"></script>
+		<script type="text/javascript" src="assets/js/notification.js"></script>
 	</footer>
 
 </html>
