Added the visual subcription (menu bar) to info fluxes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</div>
 
 		<nav id="side_menu">
-			<li id="home_btn" class="section" title="Home" onclick="show_home()">
+			<li id="home_btn" class="section" onclick="show_home()">
 				<span>Home</span>
 			</li>
 			
