End of the animation + added control on the url input

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<div id="new_site">
 			<input id="new_url" type="text" placeholder="Website URL"></input>
 			<button onclick="subscribe_to_new_site(document.getElementById('new_url').value)">Subscribe</button>
+			<p id="new_site_error">You can insert here a news feed you want to follow.</p>
 		</div>
 		
 		<div id="main_wrapper" onclick="reset_new_site_subscription()">
