Adding correct CSS identifiers for added components

--- a/index.html
+++ b/index.html
@@ -36,23 +36,24 @@
 		<nav id="side_menu">
 			<nav id="icons">
 				<li id="home_btn" class="section" onclick="show_home()">
-					<span>Home</span>
+					<div>Home</div>
 				</li>
 				
 				<hr />
 				<li id="faucon_btn" class="section" onclick="show_faucondor()">
-					<span>Faucondor</span>
+					<div>Faucondor</div>
+					<span class="new_item">3</span>
 				</li>
 				<li id="wiki_btn" class="section" onclick="show_wiki()">
-					<span>Wiki ESN France</span>
+					<div>Wiki ESN France</div>
 				</li>
 				<li id="buddysystem_btn" class="section" onclick="show_buddysystem()">
-					<span>BuddySystem</span>
+					<div>BuddySystem</div>
 				</li>
 			</nav>
 			
 			<li class='section subscribe' onclick="show_new_site_subscription()">
-				<span>Subscribe to a news flux</span>
+				<div>Subscribe to a news flux</div>
 			</li>
 			
 			<!-- <li id="tuto_btn" class="section"></li> -->
