Added some graphics improvements

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		
 		<div id="main_wrapper" onclick="reset_new_site_subscription()">
 			<div id="home" class="category">
-				<h1><img class="img_center" src="assets/img/logo.png"></h1>
+				<h1><img class="img_center" src="assets/img/logo.png" draggable="false"></h1>
 				<p>Welcome to ESNbang!, the new application for members of the Erasmus Student Network !</p>
 				<p>This application gathers many tools used every day by ESNers, everything is at the same place, no need to search for the tools anymore ! <br />
 				ESNbang! can also send you notifications: it listens to information sources (Facebook pages, livestreams, etc) and can tell you when something is happening !
