Added scrolling button

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 			<!-- <li id="tuto_btn" class="section"></li> -->
 			<!-- <li id="logoinserter_btn" class="section" onclick="show_logoinserter()"></li> -->
 			<!-- <li id="galaxy_btn" class="section" onclick="show_galaxy()"></li> -->
+			
+			<button class="scroll_btn">▼</button>
 		</nav>
 
 	</body>
