Improvements on the scrolling buttons

--- a/index.html
+++ b/index.html
@@ -53,8 +53,12 @@
 			<!-- <li id="logoinserter_btn" class="section" onclick="show_logoinserter()"></li> -->
 			<!-- <li id="galaxy_btn" class="section" onclick="show_galaxy()"></li> -->
 			
-			<button id="btn_up" class="scroll_btn" style="top: -3px;">▲</button>
-			<button id="btn_down" class="scroll_btn">▼</button>
+			<div class="scroll_btn_hover" id="btn_up_hover" style="top: -3px;">
+				<button id="btn_up" class="scroll_btn" style="top: -3px;">▲</button>
+			</div>
+			<div class="scroll_btn_hover" id="btn_down_hover">
+				<button id="btn_down" class="scroll_btn">▼</button>
+			</div>
 		</nav>
 
 	</body>
