Fix down scrolling bug

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<p class="sideinfo"><br />Coded with love by the G33k team (France)</p>
 			</div>
 
-            <iframe id="wiki_frame" src="http://wiki.ixesn.fr"></iframe>
-			<iframe id="buddysystem_frame" src="http://buddysystem.eu/choose"></iframe>
+            <iframe id="wiki_frame" src="http://live.esn.org"></iframe>
+			<iframe id="buddysystem_frame" src="http://galaxy.esn.org"></iframe>
 		</div>
 		
 		<nav id="side_menu">
