Added "module bénévoles" section

--- a/index.html
+++ b/index.html
@@ -26,8 +26,16 @@
 				<p class="sideinfo"><br />Coded with love by the G33k team (France)</p>
 			</div>
 
-            <iframe id="wiki_frame" src="http://live.esn.org"></iframe>
-			<iframe id="buddysystem_frame" src="http://galaxy.esn.org"></iframe>
+            <iframe id="wiki_frame" src="http://wiki.ixesn.fr"></iframe>
+			<iframe id="buddysystem_frame" src="http://buddysystem.eu/"></iframe>
+			<iframe id="mb_frame" src="http://gestion.ixesn.fr/connect.php"></iframe>
+			
+			<!--
+				Headers problems
+				https://communauteixesn.slack.com/
+				http://inscriptions.ixesn.fr
+				http://webshop.ixesn.fr
+			-->
 		</div>
 		
 		<nav id="side_menu">
@@ -42,6 +50,9 @@
 				</li>
 				<li id="buddysystem_btn" class="section" onclick="show_buddysystem()">
 					<div>BuddySystem</div>
+				</li>
+				<li id="mb_btn" class="section" onclick="show_mb()">
+					<div>Module Bénévoles</div>
 				</li>
 			</nav>
 			
