Added "excel d'or" + some comments

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			</div>
 
 			<webview id="wiki_frame" class="frame" src="http://wiki.ixesn.fr"></webview>
+			<webview id="excel_frame" class="frame" src="http://url de l'excel.fr"></webview>
 			<webview id="buddysystem_frame" class="frame" src="http://buddysystem.eu/"></webview>
 			<webview id="mb_frame" class="frame" src="http://gestion.ixesn.fr/connect.php"></webview>
 			<webview id="slack_frame" class="frame" src="https://communauteixesn.slack.com"></webview>
@@ -41,6 +42,9 @@
 				<hr />
 				<li id="wiki_btn" class="section" onclick="show_wiki()">
 					<div>Wiki ESN France</div>
+				</li>
+				<li id="excel_btn" class="section" onclick="show_excel()">
+					<div>Excel d'or</div>
 				</li>
 				<li id="buddysystem_btn" class="section" onclick="show_buddysystem()">
 					<div>BuddySystem</div>
