Fixed the "Excel d'or" URL

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			</div>
 
 			<webview id="wiki_frame" class="frame" src="http://wiki.ixesn.fr"></webview>
-			<webview id="excel_frame" class="frame" src="http://url de l'excel.fr"></webview>
+			<webview id="excel_frame" class="frame" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRKN9kuV5KoUJ-ICqRHsM3CYiBBUFEOF09elVyKoiBTjJGrAcs0tcBCmF6KnTiqUhH10u7gQJw1v0tp/pubhtml?widget=true&headers=false"></webview>
 			<webview id="buddysystem_frame" class="frame" src="http://buddysystem.eu/"></webview>
 			<webview id="mb_frame" class="frame" src="http://gestion.ixesn.fr/connect.php"></webview>
 			<webview id="slack_frame" class="frame" src="https://communauteixesn.slack.com"></webview>
