--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 				<p class="sideinfo"><br /><b>< ></b> with <b>❤</b> by the G33k team (France)</p>
 			</div>
 
-			<webview id="wiki_frame" class="frame" src="http://wiki.ixesn.fr"></webview>
-			<webview id="excel_frame" class="frame" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRKN9kuV5KoUJ-ICqRHsM3CYiBBUFEOF09elVyKoiBTjJGrAcs0tcBCmF6KnTiqUhH10u7gQJw1v0tp/pubhtml?widget=true&headers=false"></webview>
-			<webview id="buddysystem_frame" class="frame" src="http://buddysystem.eu/"></webview>
-			<webview id="mb_frame" class="frame" src="http://gestion.ixesn.fr/connect.php"></webview>
-			<webview id="slack_frame" class="frame" src="https://communauteixesn.slack.com"></webview>
+			<webview id="wiki_frame" class="frame" data-origin="application" src="http://wiki.ixesn.fr"></webview>
+			<webview id="excel_frame" class="frame" data-origin="application" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRKN9kuV5KoUJ-ICqRHsM3CYiBBUFEOF09elVyKoiBTjJGrAcs0tcBCmF6KnTiqUhH10u7gQJw1v0tp/pubhtml?widget=true&headers=false"></webview>
+			<webview id="buddysystem_frame" class="frame" data-origin="application" src="http://buddysystem.eu/"></webview>
+			<webview id="mb_frame" class="frame" data-origin="application" src="http://gestion.ixesn.fr/connect.php"></webview>
+			<webview id="slack_frame" class="frame" data-origin="application" src="https://communauteixesn.slack.com"></webview>
 		</div>
 
 		<nav id="side_menu">
