--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
 				<p class="sideinfo"><br /><b>< ></b> with <b>❤</b> by the G33k team (France)</p>
 			</div>
 
-			<webview id="wiki_frame" class="frame" data-origin="application" src="http://wiki.ixesn.fr"></webview>
-			<webview id="excel_frame" class="frame" data-origin="application" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRKN9kuV5KoUJ-ICqRHsM3CYiBBUFEOF09elVyKoiBTjJGrAcs0tcBCmF6KnTiqUhH10u7gQJw1v0tp/pubhtml?widget=true&headers=false"></webview>
-			<webview id="buddysystem_frame" class="frame" data-origin="application" src="http://buddysystem.eu/"></webview>
-			<webview id="mb_frame" class="frame" data-origin="application" src="http://gestion.ixesn.fr/connect.php"></webview>
-			<webview id="slack_frame" class="frame" data-origin="application" src="https://communauteixesn.slack.com"></webview>
+			<!-- id of the frame = its url.hashCode() -->
+			<webview id="b-329606763" class="frame" data-origin="application" src="http://wiki.ixesn.fr"></webview>
+			<webview id="b-280049688" class="frame" data-origin="application" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRKN9kuV5KoUJ-ICqRHsM3CYiBBUFEOF09elVyKoiBTjJGrAcs0tcBCmF6KnTiqUhH10u7gQJw1v0tp/pubhtml?widget=true&headers=false"></webview>
+			<webview id="b1624201268" class="frame" data-origin="application" src="http://buddysystem.eu/"></webview>
+			<webview id="b-1504237755" class="frame" data-origin="application" src="http://gestion.ixesn.fr/connect.php"></webview>
+			<webview id="b-1057396883" class="frame" data-origin="application" src="https://communauteixesn.slack.com"></webview>
 		</div>
 
 		<nav id="side_menu">
@@ -40,19 +41,19 @@
 				</li>
 
 				<hr />
-				<li id="wiki_btn" class="section" onclick="show_wiki()">
+				<li id="wiki_btn" class="section" onclick="show_frame('b-329606763')">
 					<div>Wiki ESN France</div>
 				</li>
-				<li id="excel_btn" class="section" onclick="show_excel()">
+				<li id="excel_btn" class="section" onclick="show_frame('b-280049688')">
 					<div>Excel d'or</div>
 				</li>
-				<li id="buddysystem_btn" class="section" onclick="show_buddysystem()">
+				<li id="buddysystem_btn" class="section" onclick="show_frame('b1624201268')">
 					<div>BuddySystem</div>
 				</li>
-				<li id="mb_btn" class="section" onclick="show_mb()">
+				<li id="mb_btn" class="section" onclick="show_frame('b-1504237755')">
 					<div>Module Bénévoles</div>
 				</li>
-				<li id="slack_btn" class="section" onclick="show_slack()">
+				<li id="slack_btn" class="section" onclick="show_frame('b-1057396883')">
 					<div>Slack</div>
 				</li>
 			</nav>
