--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<p id="subscription_text"></p>
 		</div>
 
-		<div id="main_wrapper" onclick="reset_new_site_subscription()">
+		<div id="main_wrapper" onclick="ESNbang.subscription.reset_new_site_subscription()">
 			<div id="home" class="category">
 				<h1><img class="img_center" src="assets/img/logo.png" draggable="false"></h1>
 				<p id="home_message"></p>
@@ -34,29 +34,29 @@
 
 		<nav id="side_menu">
 			<nav id="icons">
-				<li id="home_btn" class="section" onclick="show_home()">
+				<li id="home_btn" class="section" onclick="ESNbang.frames.show_home()">
 					<div id="home_tooltip">Home</div>
 				</li>
 
 				<hr />
-				<li id="wiki_btn" class="section" onclick="show_frame('b-329606763')">
+				<li id="wiki_btn" class="section" onclick="ESNbang.frames.show_frame('b-329606763')">
 					<div>Wiki ESN France</div>
 				</li>
-				<li id="excel_btn" class="section" onclick="show_frame('b-280049688')">
+				<li id="excel_btn" class="section" onclick="ESNbang.frames.show_frame('b-280049688')">
 					<div>Excel d'or</div>
 				</li>
-				<li id="buddysystem_btn" class="section" onclick="show_frame('b1624201268')">
+				<li id="buddysystem_btn" class="section" onclick="ESNbang.frames.show_frame('b1624201268')">
 					<div>BuddySystem</div>
 				</li>
-				<li id="mb_btn" class="section" onclick="show_frame('b-1504237755')">
+				<li id="mb_btn" class="section" onclick="ESNbang.frames.show_frame('b-1504237755')">
 					<div>Module Bénévoles</div>
 				</li>
-				<li id="slack_btn" class="section" onclick="show_frame('b-1057396883')">
+				<li id="slack_btn" class="section" onclick="ESNbang.frames.show_frame('b-1057396883')">
 					<div>Slack</div>
 				</li>
 			</nav>
 
-			<li class='section subscribe' onclick="show_new_site_subscription()">
+			<li class='section subscribe' onclick="ESNbang.subscription.show_new_site_subscription()">
 				<div id="subscription_tooltip"></div>
 			</li>
 
@@ -76,10 +76,14 @@
 		<script type="text/javascript" src="assets/libs/iconselect/lib/control/iconselect.js"></script>
 
 		<!-- modules -->
-		<script type="text/javascript" src="assets/js/i18n.js"></script>
-		<script type="text/javascript" src="assets/js/main.js"></script>
+		<script type="text/javascript" src="assets/js/modules/commons.js"></script>
+		<script type="text/javascript" src="assets/js/modules/i18n.js"></script>
+		<script type="text/javascript" src="assets/js/modules/frames.js"></script>
+		<script type="text/javascript" src="assets/js/modules/subscription.js"></script>
+		<script type="text/javascript" src="assets/js/modules/menu.js"></script>
+		<script type="text/javascript" src="assets/js/modules/notification.js"></script>
 		<script type="text/javascript" src="assets/js/storage.js"></script>
-		<script type="text/javascript" src="assets/js/notification.js"></script>
+		
 	</footer>
 
 </html>
