Ending breaking the code into modules

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 		<div id="new_site">
 			<input id="subscription_placeholder" type="text" placeholder=""></input>
-			<button id="subscription_button_text" onclick="subscribe_to_new_site(document.getElementById('subscription_placeholder').value)"></button>
+			<button id="subscription_button_text" onclick="ESNbang.storage.subscribe_to_new_site(document.getElementById('subscription_placeholder').value)"></button>
 			<p id="subscription_text"></p>
 		</div>
 
-		<div id="main_wrapper" onclick="ESNbang.subscription.reset_new_site_subscription()">
+		<div id="main_wrapper" onclick="ESNbang.subscription.reset()">
 			<div id="home" class="category">
 				<h1><img class="img_center" src="assets/img/logo.png" draggable="false"></h1>
 				<p id="home_message"></p>
@@ -83,7 +83,7 @@
 		<script type="text/javascript" src="assets/js/modules/menu.js"></script>
 		<script type="text/javascript" src="assets/js/modules/notification.js"></script>
 		<script type="text/javascript" src="assets/js/storage.js"></script>
-		
+
 	</footer>
 
 </html>
