--- a/index.html
+++ b/index.html
@@ -34,24 +34,24 @@
 
 		<nav id="side_menu">
 			<nav id="icons">
-				<li id="home_btn" class="section" onclick="ESNbang.frames.show_home()">
+				<li id="home_btn" class="section" onclick="ESNbang.frameSystem.show_home()">
 					<div id="home_tooltip">Home</div>
 				</li>
 
 				<hr />
-				<li id="wiki_btn" class="section" onclick="ESNbang.frames.show_frame('b-329606763')">
+				<li id="wiki_btn" class="section" onclick="ESNbang.frameSystem.show_frame('b-329606763')">
 					<div>Wiki ESN France</div>
 				</li>
-				<li id="excel_btn" class="section" onclick="ESNbang.frames.show_frame('b-280049688')">
+				<li id="excel_btn" class="section" onclick="ESNbang.frameSystem.show_frame('b-280049688')">
 					<div>Excel d'or</div>
 				</li>
-				<li id="buddysystem_btn" class="section" onclick="ESNbang.frames.show_frame('b1624201268')">
+				<li id="buddysystem_btn" class="section" onclick="ESNbang.frameSystem.show_frame('b1624201268')">
 					<div>BuddySystem</div>
 				</li>
-				<li id="mb_btn" class="section" onclick="ESNbang.frames.show_frame('b-1504237755')">
+				<li id="mb_btn" class="section" onclick="ESNbang.frameSystem.show_frame('b-1504237755')">
 					<div>Module Bénévoles</div>
 				</li>
-				<li id="slack_btn" class="section" onclick="ESNbang.frames.show_frame('b-1057396883')">
+				<li id="slack_btn" class="section" onclick="ESNbang.frameSystem.show_frame('b-1057396883')">
 					<div>Slack</div>
 				</li>
 			</nav>
@@ -78,11 +78,11 @@
 		<!-- modules -->
 		<script type="text/javascript" src="assets/js/modules/commons.js"></script>
 		<script type="text/javascript" src="assets/js/modules/i18n.js"></script>
-		<script type="text/javascript" src="assets/js/modules/frames.js"></script>
+		<script type="text/javascript" src="assets/js/modules/frameSystem.js"></script>
 		<script type="text/javascript" src="assets/js/modules/subscription.js"></script>
 		<script type="text/javascript" src="assets/js/modules/menu.js"></script>
 		<script type="text/javascript" src="assets/js/modules/notification.js"></script>
-		<script type="text/javascript" src="assets/js/storage.js"></script>
+		<script type="text/javascript" src="assets/js/modules/storage.js"></script>
 
 	</footer>
 
