Added packaging scripts

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		</head>
 
 		<div id="loading">
-			<h1><img id="loading_logo" class="img_loading" src="assets/img/star.png"></h1>
+			<h1><img id="loading_logo" class="img_loading" src="assets/img/icons/star.png"></h1>
 		</div>
 
 		<div id="new_site">
