Breaking the 'Menu' module into two submodules

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 		<script type="text/javascript" src="assets/js/modules/frameSystem.js"></script>
 		<script type="text/javascript" src="assets/js/modules/subscription.js"></script>
 		<script type="text/javascript" src="assets/js/modules/menu.js"></script>
+		<script type="text/javascript" src="assets/js/modules/menuButton.js"></script>
 		<script type="text/javascript" src="assets/js/modules/notification.js"></script>
 		<script type="text/javascript" src="assets/js/modules/storage.js"></script>
 
