A bit of refactoring

--- a/index.html
+++ b/index.html
@@ -34,24 +34,24 @@
 
 		<nav id="side_menu">
 			<nav id="icons">
-				<li id="home_btn" class="section" onclick="ESNbang.frameSystem.show_home()">
+				<li id="home_btn" class="section" onclick="ESNbang.frameManager.show_home()">
 					<div id="home_tooltip">Home</div>
 				</li>
 
 				<hr />
-				<li id="wiki_btn" class="section" onclick="ESNbang.frameSystem.show_frame('b-329606763_frame')">
+				<li id="wiki_btn" class="section" onclick="ESNbang.frameManager.show_frame('b-329606763_frame')">
 					<div>Wiki ESN France</div>
 				</li>
-				<li id="excel_btn" class="section" onclick="ESNbang.frameSystem.show_frame('b-280049688_frame')">
+				<li id="excel_btn" class="section" onclick="ESNbang.frameManager.show_frame('b-280049688_frame')">
 					<div>Excel d'or</div>
 				</li>
-				<li id="buddysystem_btn" class="section" onclick="ESNbang.frameSystem.show_frame('b1624201268_frame')">
+				<li id="buddysystem_btn" class="section" onclick="ESNbang.frameManager.show_frame('b1624201268_frame')">
 					<div>BuddySystem</div>
 				</li>
-				<li id="mb_btn" class="section" onclick="ESNbang.frameSystem.show_frame('b-1504237755_frame')">
+				<li id="mb_btn" class="section" onclick="ESNbang.frameManager.show_frame('b-1504237755_frame')">
 					<div>Module Bénévoles</div>
 				</li>
-				<li id="slack_btn" class="section" onclick="ESNbang.frameSystem.show_frame('b-1057396883_frame')">
+				<li id="slack_btn" class="section" onclick="ESNbang.frameManager.show_frame('b-1057396883_frame')">
 					<div>Slack</div>
 				</li>
 			</nav>
@@ -78,10 +78,10 @@
 		<!-- modules -->
 		<script type="text/javascript" src="assets/js/modules/commons.js"></script>
 		<script type="text/javascript" src="assets/js/modules/i18n.js"></script>
-		<script type="text/javascript" src="assets/js/modules/frameSystem.js"></script>
+		<script type="text/javascript" src="assets/js/modules/frameManager.js"></script>
 		<script type="text/javascript" src="assets/js/modules/subscription.js"></script>
 		<script type="text/javascript" src="assets/js/modules/menu.js"></script>
-		<script type="text/javascript" src="assets/js/modules/menuButton.js"></script>
+		<script type="text/javascript" src="assets/js/modules/buttonManager.js"></script>
 		<script type="text/javascript" src="assets/js/modules/notification.js"></script>
 		<script type="text/javascript" src="assets/js/modules/storage.js"></script>
 
