--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
 		<head>
 			<link rel="stylesheet" href="assets/css/main.css">
 			<link rel="stylesheet" href="assets/libs/iconselect/css/lib/control/iconselect.css">
+			<link rel="stylesheet" href="assets/libs/loading.io/loading-bar.css">
 		</head>
 
 		<div id="loading">
-			<h1><img id="loading_logo" class="img_loading" src="assets/img/icons/star.png"></h1>
+			<h1>
+				<img id="loading_logo" class="img_loading" src="assets/img/icons/star.png">
+				<div id="loading_bar"
+				data-preset="circle"
+				data-stroke="data:ldbar/res,gradient(0,1,#27ABE2,#7AC043,#F37B20,#EB0A8D)"
+				data-stroke-width="1"
+				style="position:absolute;width:150px;height:150px;left:50%;margin-left:-75px;top:50%;margin-top:-75px"></div>
+			</h1>
 		</div>
 
 		<div id="new_site">
@@ -74,6 +82,7 @@
 		<!-- libraries -->
 		<script type="text/javascript" src="assets/libs/iconselect/lib/iscroll.js"></script>
 		<script type="text/javascript" src="assets/libs/iconselect/lib/control/iconselect.js"></script>
+		<script type="text/javascript" src="assets/libs/loading.io/loading-bar.min.js"></script>
 
 		<!-- modules -->
 		<script type="text/javascript" src="assets/js/modules/commons.js"></script>
