Adding a tutorial mode

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 			<link rel="stylesheet" href="assets/css/main.css">
 			<link rel="stylesheet" href="assets/libs/iconselect/css/lib/control/iconselect.css">
 			<link rel="stylesheet" href="assets/libs/loading.io/loading-bar.css">
+			<link rel="stylesheet" href="assets/libs/focus/focusjs.css">
+			<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		</head>
 
 		<div id="loading">
@@ -26,7 +28,7 @@
 
 		<div id="main_wrapper" onclick="Universe.subscription.reset()">
 			<div id="home" class="category">
-				<h1><img class="img_center" src="assets/img/logo.png" draggable="false"></h1>
+				<h1><img class="img_center" src="assets/img/logo.png" draggable="false" onclick="Universe.commons.launch_tutorial()"></h1>
 				<p id="home_message"></p>
 				<p class="sideinfo"><br /><b>< ></b> with <b>❤</b> by the G33k team (France)</p>
 				<div id="lang-select"></div>
@@ -60,6 +62,11 @@
 		<script type="text/javascript" src="assets/libs/iconselect/lib/iscroll.js"></script>
 		<script type="text/javascript" src="assets/libs/iconselect/lib/control/iconselect.js"></script>
 		<script type="text/javascript" src="assets/libs/loading.io/loading-bar.min.js"></script>
+		<script type="text/javascript">
+	        window.zFnXjuqEvB = null;
+	    </script>
+		<script type="text/javascript" src="assets/libs/focus/focus.min.js"></script>
+
 
 		<!-- modules -->
 		<script type="text/javascript" src="assets/js/modules/commons.js"></script>
