--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h1>
 				<img id="loading_logo" class="img_loading" src="assets/img/icons/star.png">
 				<div id="loading_bar"
-				data-preset="circle"
+				data-preset="circle"_mode
 				data-stroke="data:ldbar/res,gradient(0,1,#27ABE2,#7AC043,#F37B20,#EB0A8D)"
 				data-stroke-width="1"
 				style="position:absolute;width:150px;height:150px;left:50%;margin-left:-75px;top:50%;margin-top:-75px"></div>
@@ -28,7 +28,7 @@
 
 		<div id="main_wrapper" onclick="Universe.subscription.reset()">
 			<div id="home" class="category">
-				<h1><img class="img_center" src="assets/img/logo.png" draggable="false" onclick="Universe.commons.launch_tutorial()"></h1>
+				<h1><img class="img_center" src="assets/img/logo.png" draggable="false" onclick="Universe.commons.launch_tutorial_mode()"></h1>
 				<p id="home_message"></p>
 				<p class="sideinfo"><br /><b>< ></b> with <b>❤</b> by the G33k team (France)</p>
 				<div id="lang-select"></div>
@@ -66,7 +66,6 @@
 	        window.zFnXjuqEvB = null;
 	    </script>
 		<script type="text/javascript" src="assets/libs/focus/focus.min.js"></script>
-
 
 		<!-- modules -->
 		<script type="text/javascript" src="assets/js/modules/commons.js"></script>
