Adding a version indicator

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 				<p id="home_message"></p>
 				<p class="sideinfo"><br /><b>< ></b> with <b>❤</b> by the G33k team (France)</p>
 				<div id="lang-select"></div>
+				<div id="version">mdr</div>
 			</div>
 		</div>
 
