Added Mac auto-update feed URL support + cleaning CSS styles

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div id="home" class="category">
 				<h1><img class="img_center" src="assets/img/logo.png" draggable="false" onclick="Universe.commons.launch_tutorial_mode()"></h1>
 				<p id="home_message"></p>
-				<p class="sideinfo"><br /><b>< ></b> with <b>❤</b> by the G33k team (France)</p>
+				<img class="authors" src="assets/img/authors.png" draggable="false">
 				<div id="lang-select"></div>
 				<div id="version">mdr</div>
 			</div>
