--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</div>
 
 		<div id="main_wrapper" onclick="Universe.subscription.reset()">
-			<div id="home" class="category">
+			<div id="home" class="category frame-show">
 				<h1><img class="img_center" src="assets/img/logo.png" draggable="false" onclick="Universe.commons.launch_tutorial_mode()"></h1>
 				<p id="home_message"></p>
 				<img class="authors" src="assets/img/authors.png" draggable="false">
