Removed platform distinction + added tutorial launch at first execution

--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
 
 		<nav id="side_menu">
 			<nav id="icons">
-				<li id="home_btn" class="section" onclick="Universe.frameManager.show_home()">
+				<li id="home_btn" onclick="Universe.frameManager.show_home()">
 					<div id="home_tooltip">Home</div>
 				</li>
-				<hr />
 			</nav>
 
 			<li class='section subscribe' onclick="Universe.subscription.show_new_site_subscription()">
