Broke commons.js into modules

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div id="main_wrapper" onclick="Universe.subscription.reset()">
 			<div id="home" class="homeWrapper frame-show">
 				<nav class="home">
-					<h1><img class="img_center" src="assets/img/logo.png" draggable="false" onclick="Universe.commons.launch_tutorial_mode()"></h1>
+					<h1><img class="img_center" src="assets/img/logo.png" draggable="false" onclick="Universe.tutorial.launch_tutorial_mode()"></h1>
 					<p id="home_message"></p>
 					<img class="authors" src="assets/img/authors.png" draggable="false">
 					<div id="lang-select"></div>
@@ -78,6 +78,8 @@
 		<script type="text/javascript" src="assets/js/modules/buttonManager.js"></script>
 		<script type="text/javascript" src="assets/js/modules/notification.js"></script>
 		<script type="text/javascript" src="assets/js/modules/storage.js"></script>
+		<script type="text/javascript" src="assets/js/modules/tutorial.js"></script>
+		<script type="text/javascript" src="assets/js/modules/updater.js"></script>
 
 	</footer>
 
