new disposition for the logo banner

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div id="main_wrapper" onclick="Universe.subscription.reset()">
 			<div id="home" class="homeWrapper frame-show">
 				<nav class="home">
-					<h1><img class="img_center" src="assets/img/logo.png" draggable="false" onclick="Universe.tutorial.launch_tutorial_mode()"></h1>
+					<img class="img_center" src="assets/img/logo.png" draggable="false" onclick="Universe.tutorial.launch_tutorial_mode()">
 					<p id="home_message"></p>
 					<img class="authors" src="assets/img/authors.png" draggable="false">
 					<div id="lang-select"></div>
