Added new loader

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
 		<div id="loading">
 			<h1>
-				<img id="loading_logo" class="img_loading" src="assets/img/icons/star.png">
+				<img src="assets/img/loader/logofull.png">
+				<img id="loading_logo" src="assets/img/loader/boussole.png">
 				<div id="loading_bar"
 				data-preset="circle"_mode
 				data-stroke="data:ldbar/res,gradient(0,1,#27ABE2,#7AC043,#F37B20,#EB0A8D)"
-				data-stroke-width="2"
-				style="position:absolute;width:150px;height:150px;left:50%;margin-left:-75px;top:50%;margin-top:-75px"></div>
+				data-stroke-width="4"
+				style="position:absolute;width:115px;height:115px;left:50%;margin-left:-57px;top:50%;margin-top:-57px"></div>
 			</h1>
 		</div>
 
@@ -31,7 +32,7 @@
 				<nav class="home">
 					<img class="img_center" src="assets/img/logo.png" draggable="false" onclick="Universe.tutorial.launch_tutorial_mode()">
 					<p id="home_message"></p>
-					<img class="authors" src="assets/img/authors.png" draggable="false">
+					<!--<img class="authors" src="assets/img/authors.png" draggable="false">-->
 					<div id="lang-select"></div>
 					<div id="version">mdr</div>
 				</nav>
