Changed the loading background

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<div id="loading">
 			<h1>
-				<img src="assets/img/loader/logofull.png">
+				<!--<img src="assets/img/loader/logofull.png">-->
 				<img id="loading_logo" src="assets/img/loader/boussole.png">
 				<div id="loading_bar"
 				data-preset="circle"_mode
