Added tutorial button

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
 		<div id="main_wrapper" onclick="Universe.subscription.reset()">
 			<div id="home" class="homeWrapper frame-show">
 				<nav class="home">
-					<img class="img_center" src="assets/img/logo.png" draggable="false" onclick="Universe.tutorial.launch_tutorial_mode()">
+					<img class="img_center" src="assets/img/logo.png" draggable="false">
 					<p id="home_message"></p>
 					<!--<img class="authors" src="assets/img/authors.png" draggable="false">-->
 					<div id="lang-select"></div>
-					<div id="version">mdr</div>
+					<button id="tuto-btn" onclick="Universe.tutorial.launch_tutorial_mode()"></button>
+					<div id="version">42.0.0</div>
 				</nav>
 			</div>
 		</div>
