Added loading percentage indicator

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				data-stroke="data:ldbar/res,gradient(0,1,#27ABE2,#7AC043,#F37B20,#EB0A8D)"
 				data-stroke-width="4"
 				style="position:absolute;width:115px;height:115px;left:50%;margin-left:-57px;top:50%;margin-top:-57px"></div>
+				<div id="percentageLoader">0%</div>
 			</h1>
 		</div>
 
