--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
 		</div>
 
 		<div id="main_wrapper" onclick="Universe.subscription.reset()">
-			<div id="home" class="homeWrapper frame-show">
-				<nav class="home">
+			<div id="home" class="homeCarousel frame-show">
+				<nav id="homeView" class="carousel-module homeView">
 					<img class="img_center" src="assets/img/logo.png" draggable="false">
 					<p id="home_message"></p>
 					<!--<img class="authors" src="assets/img/authors.png" draggable="false">-->
 					<div id="lang-select"></div>
 					<button id="tuto-btn" onclick="Universe.tutorial.launch_tutorial_mode()"></button>
 					<div id="version">42.0.0</div>
+				</nav>
+				<nav id="settingsView" class="carousel-module settingsView">
 				</nav>
 			</div>
 		</div>
