--- a/index.html
+++ b/index.html
@@ -46,13 +46,18 @@
 					<img class="img_center" src="assets/img/logo.png" draggable="false">
 					<p id="home_message"></p>
 					<!--<img class="authors" src="assets/img/authors.png" draggable="false">-->
-					<div id="lang-select"></div>
+
 					<button id="tuto-btn" onclick="Universe.tutorial.launch_tutorial_mode()"></button>
-					<div id="version">42.0.0</div>
+					<button id="settings-btn" onclick="Universe.frameManager.show_settings_view()">SETTINGS</button>
+
 				</nav>
 
 				<!-- Settings View-->
-				<nav id="settingsView" class="carousel-module settingsView"></nav>
+				<nav id="settingsView" class="carousel-module settingsView">
+					<div id="lang-select"></div>
+					<div id="version">42.0.0</div>
+					<button onclick="Universe.frameManager.show_home_view()">go home!</button>
+				</nav>
 			</div>
 		</div>
 
