--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<!--<img class="authors" src="assets/img/authors.png" draggable="false">-->
 
 					<button id="tuto-btn" onclick="Universe.tutorial.launch_tutorial_mode()"></button>
-					<button id="settings-btn" onclick="Universe.frameManager.show_settings_view()">SETTINGS</button>
+					<button id="settings-btn" onclick="Universe.frameManager.show_settings_view()"></button>
 
 				</nav>
 
@@ -56,7 +56,15 @@
 				<nav id="settingsView" class="carousel-module settingsView">
 					<div id="lang-select"></div>
 					<div id="version">42.0.0</div>
-					<button onclick="Universe.frameManager.show_home_view()">go home!</button>
+					<button id="home-view-btn" onclick="Universe.frameManager.show_home_view()"></button>
+					<h1 id="settingsTitle">Settings</h1>
+					<hr style="margin-bottom:13px"/>
+					<ul id="settingsList">
+						<li class="settingsItem">bonjour</li>
+						<li class="settingsItem">bonjour</li>
+						<li class="settingsItem">bonjour</li>
+						<li class="settingsItem">bonjour</li>
+					</ul>
 				</nav>
 			</div>
 		</div>
